
add_executable(hello hello.cpp)
add_executable(1_hello_world part-1/1_hello_world.cpp)
add_executable(2_data_types part-1/2_data_types.cpp)
add_executable(7_arrays part-1/7_arrays.cpp)
add_executable(1_function part-2/1_function.cpp)
add_executable(1_read_file part-3/1_read_file.cpp)
add_executable(2_write_file part-3/2_write_file.cpp)
add_executable(3_appending_file part-3/3_appending_file.cpp)